<resources>
    <string name="app_name">MILF</string>
    <string name="MongoURL">http://10.0.2.2:8080/audience/</string>
    <string name="pestanaAsistentes">Asistentes</string>
    <string name="pestanaPrograma">Programa</string>
    <string name="pestanaFechas">Fechas relevantes</string>
    <string name="pestanaLocalizacion">Localizacion</string>
    <string name="pestanaInfo">Info</string>
    <string name="asistentes_boton">Más</string>
    <string name="formatoFecha">Las fechas se muestran en formato &quot;año-mes-día&quot;</string>
    <string name="nombre_label">Nombre</string>
    <string name="apellidos_label">Apellidos</string>
    <string name="dni_label">DNI</string>
    <string name="telefono_label">Teléfono</string>
    <string name="fechanac_label">Fecha de nacimiento</string>
    <string name="botonanadir_label">Añadir</string>
    <string name="botonmodificar_label">Modificar</string>
    <string name="nombre_hint">Alfonso</string>
    <string name="apellidos_hint">López García</string>
    <string name="dni_hint">11223344X</string>
    <string name="telefono_hint">600300900</string>
    <string name="fechanac_hint">Pulsa dos veces</string>
    <string name="img_description_form">Símbolo representativo de un individuo cualquiera</string>
    <string name="title_activity_asistentes">AsistentesActivity</string>
    <string name="localizacion_texto">Nuestro evento tiene lugar en el Teatro Villamarta, un espacio ideal con capacidad para 1.226 espectadores entre el patio de butacas y los dos pisos. Ubicado en Jerez de la Frontera, es uno de los teatros de referencia de Cádiz.\nInaugurado en 1926, es obra del arquitecto Teodoro Anasagasti y está ubicado en el antiguo Convento de Veracruz. Tras su cierre en 1984, fue comprado dos años más tarde por el Ayuntamiento de la localidad gaditana y reinagurado en 1996. Es la sede principal del Festival de Jerez de flamenco.</string>
    <string name="info1">App desarrollada por el grupo:</string>
    <string name="info2">Luis Miguel Carpio Gavira\nSergio García Navarro</string>
    <string name="info3">Información y gestión del evento anual MILF.\n\nProducida para PNET (ESI, UCA).</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="programa_actividades_26">Actividades programadas para el viernes 26</string>
    <string name="programa_actividades_27">Actividades programadas para el sábado 27</string>
    <string name="coro_text">Fundado en 1988 con el fin de participar en el Teatro Municipal Miguel de Cervantes. Dirigido actualmente por Salvador Vázquez. Ha participado en colaboraciones con directores como Odón Alonso, Bertrand de Billy, Luis Remartínez y Aldo Ceccato, así como maestros de escena de la altura de Emilio Sagi, Luis Iturri o Lindsay Kemp. Ha participado en la grabación del CD "Cancionero de Navidad". Ha sido distinguido con el premio a la Mejor Labor Musical del año 2006. A lo largo de estos años ha trabajado en obras que cubren una gran variedad de periodos y autores.</string>
    <string name="pablo_text">Nacido en Granada en 1977. Comenzó cantando en el coro escolar y aprendiendo piano a los 9 años. Estudió dirección orquestal e historia del arte. Es el fundador de la Orquesta Barroca de Granada y del Ensemble SONÓORA de música contemporánea. Recibió el Premio Nacional por su composición \"La mitad de la verdad está en los ojos\". En 2011 fue nombrado director principal de la Orchestra of St. Luke\'s por un periodo de cuatro años. En 2012 le fue otorgada la Medalla al Honor de la Fundación Rodríguez Acosta. En 2013 dirigió por primera vez la Orquesta Filarmónica de Múnich, la Orquesta del Mozarteum de Salzburgo y la Orquesta de la Gewandhaus de Leipzig. En 2014 vio la luz una nueva grabación con el sello harmonia mundi, en la que Heras Casado dirige la Sinfonía nº2 de Mendelssohn. Nombrado Director del Año por Musical America en ese mismo año. En 2016 dirigió por primera vez la Orquesta Filarmónica de Viena y la Orquesta Sinfónica de la Radio Sueca. En 2018 fue distinguido como Caballero de la Orden de las Artes y las Letras del gobierno francés, así como Embajador Solidario 2019 de la Fundación Ayuda en Acción. El 9 de junio del pasado año celebró su 1000º concierto.</string>
    <string name="carlos_text">Nacido en Málaga en el año 1966. Estudió en el conservatorio de su ciudad natal, compatibilizándolo con sus estudios de Medicina, los cuales finalmente abandonó para dedicarse al canto. Debutó en el Teatro de la Zarzuela de Madrid con \"La del Manojo de Rosas\", de Pablo Sorozábal. Ha cantado en los principales teatros del mundo, como son el Covent Garden de Londres y el Metropolitan Opera de Nueva York. Sus mayores triunfos los ha obtenido cantando en la Staatsoper de Viena, con piezas como el Fígaro de \"Il barbiere di Siviglia\". Otros escenarios en los que destacó son los de Zúrich, Ginebra, Amsterdam, Rávena, Chicago y Florencia. En 2004 estrenó un Macbeth ambientado en la Primera Guerra Mundial, dirigido por López Cobos. En 2006 intervino junto a Monserrat Caballé en el homenaje al barítono Manuel Ausensi en el Liceo. Álvarez cuenta con el cariño y la admiración del público del coliseo lírico andaluz, siendo uno de los cantantes predilectos del Teatro de la Maestranza de Sevilla. Recibe en 2006 un Premio Grammy a la mejor grabación de ópera en directo, por \"Falstaff\" de Verdi.</string>
    <string name="inma_text">Inmaculada Lucía Saratxaga nace en 1972. Estudió en el conservatorio de música de Bilbao y de Vitoria. Debutó como directora de orquesta en 1999, con 27 años. En 2007 fue elegida miembro de número de Jakiunde, Academia de las Ciencias, de las Artes y de las Letras del País Vasco. Fue la primera mujer que dirigió un concierto en el Vaticano, con motivo del 60º aniversario de la Declaración Universal de los Derechos Humanos. En 2009 fue galardonada con el premio a la Excelencia Europea \"por su proyección internacional y su aportación a la música clásica\". Fue nombrada \"Embajadora Honoraria de la Marca España\", premio concedido por el Foro de Marcas Renombradas por ser una de las más brillantes representates de la nueva generación de directores de orquesta en España. En 2010 fue invitada por la Comisión Europea y la SEEI para dirigir el concierto de clausura del Día de Europa. Desde 2007 colabora con la marca de relojes suizos Vacheron Constantin como imagen mundial de la empresa. Dirigió un concierto en Madrid, con la asistencia de la Reina Sofía, cuyos beneficios fueron destinados a la Fundación Reina Sofía para el proyecto Alzheimer. Dirigió el concierto solidario \"A Team For The World, África\" en 2013, en el Auditorio Nacional de Música de Madrid, en una solidaria iniciativa que pretendía apoyar los proyectos de Harambee.</string>
</resources>
