<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.uca.toolbaractionbar.AsistentesActivity">
    <item
        android:id="@+id/pestanaAsistentes"
        android:icon="@drawable/asistentes_disabled"
        android:orderInCategory="100"
        android:title="@string/pestanaAsistentes"
        app:showAsAction="always" />
    <item
        android:id="@+id/pestanaPrograma"
        android:icon="@drawable/programa"
        android:orderInCategory="100"
        android:title="@string/pestanaPrograma"
        app:showAsAction="always" />
    <item
        android:id="@+id/pestanaFechas"
        android:icon="@drawable/fechas"
        android:orderInCategory="100"
        android:title="@string/pestanaFechas"
        app:showAsAction="always" />
    <item
        android:id="@+id/pestanaLocalizacion"
        android:icon="@drawable/localizacion"
        android:orderInCategory="100"
        android:title="@string/pestanaLocalizacion"
        app:showAsAction="always" />
    <item
        android:id="@+id/pestanaInfo"
        android:orderInCategory="100"
        android:title="@string/pestanaInfo"
        app:showAsAction="never" />
</menu>